implement pwa feature. use vite pwa plugin to implement pwa functionality

--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <!-- Primary Meta Tags -->
+    <title>Rock,Paper & Scissors game</title>
+    <meta name="title" content="The best Rock, Paper & Scissors game" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="description"
+      content="Feeling bored, play this never ending adventurous rock paper  & scissors game for free"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jeron-rocks.vercel.app" />
+    <meta property="og:title" content="The best Rock, Paper & Scissors game" />
+    <meta
+      property="og:description"
+      content="Feeling bored, play this never ending adventurous rock paper  & scissors game for free"
+    />
+    <meta
+      property="og:image"
+      content="https://jeron-rocks.vercel.appassets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jeron-rocks.vercel.app" />
+    <meta
+      property="twitter:title"
+      content="The best Rock, Paper & Scissors game"
+    />
+    <meta
+      property="twitter:description"
+      content="Feeling bored, play this never ending adventurous rock paper  & scissors game for free"
+    />
+    <meta
+      property="twitter:image"
+      content="https://jeron-rocks.vercel.appassets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- PWA -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="/maskable_icon" color="#448aff" />
+    <meta name="theme-color" content="#1f3756" />
   </head>
   <body>
     <div id="root"></div>
