--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://jeron-rocks.vercel.appassets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="https://github.com/jeronasiedu/rock-paper-scissor/blob/main/public/meta.jpg?raw=true"
     />
 
     <!-- Twitter -->
@@ -38,7 +38,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://jeron-rocks.vercel.appassets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="https://github.com/jeronasiedu/rock-paper-scissor/blob/main/public/meta.jpg?raw=true"
     />
 
     <!-- PWA -->
