fix favicon and apple touch icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Primary Meta Tags -->
     <title>Rock,Paper & Scissors game</title>
     <meta name="title" content="The best Rock, Paper & Scissors game" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/pwa-192x192.png" />
     <meta
       name="description"
       content="Feeling bored, play this never ending adventurous rock paper  & scissors game for free"
@@ -42,7 +42,7 @@
     />
 
     <!-- PWA -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" sizes="192x192" />
     <link rel="mask-icon" href="/maskable_icon" color="#448aff" />
     <meta name="theme-color" content="#1f3756" />
   </head>
